@@ -2,7 +2,7 @@ type,basics,basics,basics,calculations,calculations,calculations,calculations,in
 id,,,,,,,,Id73872.1,Id73872.1,Id73872.1,Id73872.1,Id73872.1,118048,118048,118048,118048,118048,118048,118048,118048,118049,118017,118017,118017,118017,118017,118017,118017,166662,166662,166662
 timestamp,G_M2,H_ON,T_U0,AREA,E_MESS,E_N,E_ZAEHLER,E_DAY,E_INT,E_INT_N,E_TOTAL,F_AC,M_AC_E_EXP,M_AC_E_IMP,M_AC_I,M_AC_I1,M_AC_P,M_AC_P1,M_AC_U,M_AC_U1,E_INT,E_RF_ABS,E_RF_I,E_W_D,E_W_S,G_M,T,T_M,D_IN1,D_IN2,D_IN3
 2016-10-31T00:00:00+05:30,,,,5163.83,3839.72,3.77,3839.72,,,,,,,,,,,,,,,,,,,,,,,,
-2016-10-31T08:00:00+05:30,154,19267.86,22.33,,,,,0.36,0.36,0.36,36469,49.98,608.99,0,1.27,1.27,513.39,513.39,405.54,405.54,0.01,4.14,0,114.4,0.23,,22.23,,0,0,0
-2016-10-31T08:15:00+05:30,207.8,19268.1,23.32,,,,,0.5,0.51,0.5,36469,49.99,609.01,0,1.77,1.77,720.36,720.36,407.43,407.43,0.02,4.14,0,102.66,1.25,,22.95,,0,0,0
-2016-10-31T08:30:00+05:30,287,19268.36,24.72,,,,,0.65,0.65,0.65,36470,49.98,609.03,0,2.22,2.22,895.34,895.34,404.56,404.56,0.02,4.14,0,127.99,1.47,,23.65,,0,0,0
-2016-10-31T08:45:00+05:30,324.5,19268.61,25.68,,,,,0.67,0.67,0.67,36470,50.02,609.06,0,2.45,2.45,982.86,982.86,402.44,402.44,0.02,4.14,0,121.24,1.85,,24,,0,0,0
+2016-10-31T08:00:00+05:30,154,19267.86,22.33,,,,,0.36,0.36,0.01,36469,49.98,608.99,0,1.27,1.27,513.39,513.39,405.54,405.54,0.01,4.14,0,114.4,0.23,,22.23,,0,0,0
+2016-10-31T08:15:00+05:30,207.8,19268.1,23.32,,,,,0.5,0.51,0.02,36469,49.99,609.01,0,1.77,1.77,720.36,720.36,407.43,407.43,0.02,4.14,0,102.66,1.25,,22.95,,0,0,0
+2016-10-31T08:30:00+05:30,287,19268.36,24.72,,,,,0.65,0.65,0.03,36470,49.98,609.03,0,2.22,2.22,895.34,895.34,404.56,404.56,0.02,4.14,0,127.99,1.47,,23.65,,0,0,0
+2016-10-31T08:45:00+05:30,324.5,19268.61,25.68,,,,,0.67,0.67,0.03,36470,50.02,609.06,0,2.45,2.45,982.86,982.86,402.44,402.44,0.02,4.14,0,121.24,1.85,,24,,0,0,0
