@@ -1,3 +1,4 @@
 2017-02-22: First release
 2017-02-23: Add unit tests and coding standards
 2017-05-04: Add support for GZIP compression
+2017-05-16: Add description to ticket resource and update bulk example
